objects/LeanData__Temporary_Marketing_Touch__c.object
<CustomObject>
    <fields>
        <fullName>Lifecycle_Stage_First_MQL_Date__c</fullName>
        <label>Lifecycle Stage - First MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL_CM_create__c</fullName>
        <formula>DATEVALUE(LeanData__Campaign_Member_Created_Date__c)  -  Lifecycle_Stage_First_MQL_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL/CM create</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_0_to_close_date__c</fullName>
        <formula>LeanData__Opportunity_Close_Date__c - LeanData__Related_Opportunity__r.Date_Transferred_to_2_0__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2.0 to close date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>